--- a/core/templates/users/profile.html
+++ b/core/templates/users/profile.html
@@ -1,3 +1,8 @@
-<h1>Logged in as: {{ request.user.username }}</h1>
+{% extends 'main.html' %}
 
-<a href="{% url 'account_logout' %}">Logout</a>
+{% load static %}
+
+
+{% block content %}
+<h1>Logged in as: {{ request.user.username }}</h1>
+{% endblock content %}
