--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -11,6 +11,8 @@
         <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel='stylesheet' type="text/css" href="{% static 'styles/main.css' %}">
+        <!--Using this for NavBar Icons-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     </head>
 
