--- a/core/templates/users/profile.html
+++ b/core/templates/users/profile.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-
 {% block content %}
-<h1>Logged in as: {{ request.user.username }}</h1>
+<h1>User: {{ request.user.username }}</h1>
+<h1>Email: {{ request.user.email }}</h1>
 {% endblock content %}
