--- a/core/templates/users/profile.html
+++ b/core/templates/users/profile.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+
 {% block layout %}
-<h1>Hello</h1>
+<h1>Logged in as: {{ request.user.username }}</h1>
+<h1>Email: {{ request.user.email}}</h1>
 {% endblock %}
