Added Cards to several pages

--- a/core/templates/allauth/layouts/base.html
+++ b/core/templates/allauth/layouts/base.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         {% include 'navbar.html' %}
+        <!--This is a card specifically for formatting Sign Up, In, Out-->
         <div class="h-screen flex items-center justify-center">
         <div class="card w-96 bg-base-300 py-6">
         {% block body %}
