--- a/core/templates/pages/addcard.html
+++ b/core/templates/pages/addcard.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 
-    {% extends 'main.html' %}
+{% extends 'main.html' %}
 
-    {% load static %}
+{% load static %}
 
-    {% block layout %}
-        <h1>Add Cards</h1>
-        <div class="card w-96 bg-base-100 shadow-xl">
-            <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
-            <div class="card-body">
-              <h2 class="card-title">Deck</h2>
-              <p>Card details</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
-              </div>
+{% block layout %}
+<div class="h-screen flex items-center justify-center">
+    <div class="flip-card" onclick="this.classList.toggle('clicked')">
+        <div class="flip-card-inner">
+            <div class="flip-card-front" style="background-image: url('https://www.hipstersofthecoast.com/wp-content/uploads/2023/06/en_8e6a0736e8.png'); background-size: contain; background-position: center; height: 100%;">
             </div>
-          </div>
-
-    {% endblock %}
+            <div class="flip-card-back" style="background-image: url('https://www.hipstersofthecoast.com/wp-content/uploads/2023/06/en_8e6a0736e8.png'); background-size: contain; background-position: center; height: 100%; opacity: 0.5;">
+                <div style="background-color: rgba(0, 0, 0, 0.5);">
+                    <p class="text-white">Card Details:</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
