--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -13,6 +13,80 @@
         <link rel='stylesheet' type="text/css" href="{% static 'styles/main.css' %}">
         <!--Using this for NavBar Icons-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <title>{% block title %}Document{% endblock %}</title>
+        <link rel="stylesheet" href="{% static 'styles.css' %}">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</head>
+
+        <!--This is the card style. Used this as ref: https://uiverse.io/joe-watson-sbf/little-goat-24-->
+    <style>
+        .flip-card {
+            width: 300px;
+            height: 400px;
+            font-family: sans-serif;
+            border-radius: 1rem; 
+            overflow-y: scroll; 
+            border: 1px solid transparent; 
+        }
+
+        .title {
+            font-size: 1.5em;
+            font-weight: 900;
+            text-align: center;
+            margin: 0;
+        }
+
+        .flip-card-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            transition: transform 0.8s;
+            transform-style: preserve-3d;
+            background-color: grey; 
+        }
+
+        .flip-card.clicked .flip-card-inner {
+            transform: rotateY(180deg);
+        }
+
+        .flip-card-front, .flip-card-back {
+            box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            border: 1px solid rgb(0, 0, 0);
+            border-radius: 1rem; 
+            background-color: grey; 
+        }
+
+        .flip-card-front {
+            color: rgb(0, 0, 0);
+        }
+
+        .flip-card-back {
+            color: rgb(0, 0, 0);
+            transform: rotateY(180deg);
+        }
+
+        .flip-card.clicked .flip-card-front {
+            visibility: hidden; 
+        }
+
+        .flip-card.clicked .flip-card-back {
+            visibility: visible; 
+        }
+
+        
+        .flip-card:hover {
+        outline: 2px solid white;
+        }
+    </style>
 
     </head>
 
