Login with either username or email

--- a/core/templates/account/login.html
+++ b/core/templates/account/login.html
@@ -5,13 +5,13 @@
     {% trans "Sign In" %}
 {% endblock head_title %}
 {% block content %}
-<!--Used this for formatting: https://v1.tailwindcss.com/components/forms-->
+<!--Used this for formatting: https://v1.tailwindcss.com/components/forms -->
     <h1 class="text-xl text-center underline">Sign In</h1>
     <form method="post" action="/accounts/login/" class="rounded px-8 pt-6 pb-8 mb-4">
     {% csrf_token %}
         <div class="mb-4">
-        <label class="block text-sm font-bold mb-2" for="id_login">Email</label>
-        <input type="email" name="login" placeholder="Email address" autocomplete="email" maxlength="320" required id="id_login" class="shadow appearance-none border rounded w-full py-2 px-3 
+        <label class="block text-sm font-bold mb-2" for="id_login">Email/Username</label>
+        <input type="username_email" name="login" placeholder="Email/Username" autocomplete="Email/Username" maxlength="320" required id="id_login" class="shadow appearance-none border rounded w-full py-2 px-3 
         leading-tight focus:outline-none focus:shadow-outline">
         </div>
         <div class="mb-6">
