--- a/static/styles/cardstyle.css
+++ b/static/styles/cardstyle.css
@@ -1,4 +1,4 @@
-/*This is the card style. Used this as ref: https://uiverse.io/joe-watson-sbf/little-goat-24*/
+/*This is the card style. Used this account as ref: https://uiverse.io/profile/joe-watson-sbf*/
         .flip-card {
             width: 300px;
             height: 400px;
