--- a/static/styles/cardstyle.css
+++ b/static/styles/cardstyle.css
@@ -41,7 +41,7 @@
             backface-visibility: hidden;
             border: 1px solid rgb(0, 0, 0);
             border-radius: 1rem; 
-            background-color: rgb(244, 169, 169); 
+            background-color: grey; 
         }
 
         .flip-card-front {
