--- a/core/templates/account/signup.html
+++ b/core/templates/account/signup.html
@@ -59,7 +59,7 @@
     {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
 {% endif %}
 
-<!--Used ChatGPT to get script for recognizing passwords -->>
+<!--Used ChatGPT to get script for recognizing passwords -->
 <script>
     function debounce(func, wait, immediate) {
         var timeout;
