--- a/core/templates/pages/homepage.html
+++ b/core/templates/pages/homepage.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TGC Binder</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Eagle+Lake&display=swap');
 
-  {% extends 'main.html' %}
+        /* Style for TCG Binder text */
+        .tcg-binder-text {
+            font-family: 'Eagle Lake', cursive;
+            font-size: 5rem; /* Adjust the size as needed */
+            color: #ffffff; /* Adjust the color as needed */
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5); /* Optional: Add text shadow */
+        }
+    </style>
 
-  {% load static %}
-
-  {% block layout %}
-
-  <div class="hero min-h-screen bg-base-200">
-    <div class="hero-content text-center">
-      <div class="max-w-md">
-        <h1 class="text-5xl font-bold">TCG Binder</h1>
-        <p class="py-6">Welcome to TCG Binder, your ultimate digital companion for managing your trading card game collection with ease and precision. Whether you're a seasoned collector, a competitive player, or just starting out in the world of trading card games, TCG Binder offers the tools and features you need to organize, track, and showcase your collection like never before.</p>
+</head>
+<body>
+    {% extends 'main.html' %}
+    {% load static %}
+    {% block layout %}
+    <div class="hero min-h-screen" style="background-image: url('{% static 'images/bkg_magic.jpg' %}'); background-repeat: no-repeat; background-position: center; background-attachment: fixed; background-size: cover;">
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <!-- Add class to h1 tag for styling -->
+          <h1 class="mb-5 text-7xl font-bold tcg-binder-text">TCG Binder</h1>
+          <p class="mb-5 text-xl" style="color: yellow;">Welcome to TCG Binder, your ultimate digital companion for managing your trading card game collection with ease and precision. Whether you're a seasoned collector, a competitive player, or just starting out in the world of trading card games, TCG Binder offers the tools and features you need to organize, track, and showcase your collection like never before.</p>
+        </div>
       </div>
     </div>
-  </div>
-
-  {% endblock layout %}
+    {% endblock layout %}
+</body>
+</html>
